[gd_scene load_steps=65 format=3 uid="uid://yw75bmw7w4o6"]

[ext_resource type="Script" path="res://gd/player.gd" id="1_twiyk"]
[ext_resource type="Environment" uid="uid://cw374elg52t6d" path="res://Art/Environment/MorningSky.tres" id="2_2yxsw"]
[ext_resource type="AudioStream" uid="uid://ddws82w2clg20" path="res://audio/sfx/footsteps/footstep_creakywood1.wav" id="2_3b7jv"]
[ext_resource type="PackedScene" uid="uid://cy3fthxtphvcv" path="res://objects/phone.tscn" id="2_owhr2"]
[ext_resource type="AudioStream" uid="uid://4vy43fixj8wy" path="res://audio/sfx/footsteps/footstep_creakywood2.wav" id="3_tm4sc"]
[ext_resource type="AudioStream" uid="uid://mii7kq20herh" path="res://audio/sfx/footsteps/footstep_creakywood3.wav" id="4_h55va"]
[ext_resource type="AudioStream" uid="uid://c78waat4vrm7p" path="res://audio/sfx/footsteps/footstep_creakywood4.wav" id="5_gsngq"]
[ext_resource type="AudioStream" uid="uid://baov8eo815ath" path="res://audio/sfx/footsteps/footstep_creakywood5.wav" id="6_8dck5"]
[ext_resource type="AudioStream" uid="uid://x8d8s20pd6r0" path="res://audio/sfx/footsteps/footstep_creakywood6.wav" id="7_i88d1"]
[ext_resource type="AudioStream" uid="uid://b8yqaxejo7y3u" path="res://audio/sfx/footsteps/footstep_creakywood7.wav" id="8_sfodb"]
[ext_resource type="AudioStream" uid="uid://brjueku6px1s6" path="res://audio/sfx/footsteps/footstep_creakywood8.wav" id="9_3xun0"]
[ext_resource type="AudioStream" uid="uid://c47utrpyixf1x" path="res://audio/sfx/footsteps/footstep_dirt7.wav" id="10_veg2i"]
[ext_resource type="AudioStream" uid="uid://b21rs5st3cqsx" path="res://audio/sfx/footsteps/footstep_dirt6.wav" id="11_fa171"]
[ext_resource type="AudioStream" uid="uid://bnb3rn0b8wdt5" path="res://audio/sfx/footsteps/footstep_dirt5.wav" id="12_qsqtl"]
[ext_resource type="AudioStream" uid="uid://t272ej3hb3qr" path="res://audio/sfx/footsteps/footstep_dirt4.wav" id="13_kw01s"]
[ext_resource type="AudioStream" uid="uid://b4geg7jtwascq" path="res://audio/sfx/footsteps/footstep_dirt3.wav" id="14_xjwpi"]
[ext_resource type="AudioStream" uid="uid://5k8m3v3pqbtq" path="res://audio/sfx/footsteps/footstep_dirt2.wav" id="15_7k5tv"]
[ext_resource type="AudioStream" uid="uid://druv4dmnxax2v" path="res://audio/sfx/footsteps/footstep_dirt1.wav" id="16_5bb8r"]
[ext_resource type="AudioStream" uid="uid://b6qmmtpou8aus" path="res://audio/sfx/footsteps/footstep_grass1.wav" id="17_o604q"]
[ext_resource type="AudioStream" uid="uid://bonyifny7r078" path="res://audio/sfx/footsteps/footstep_grass2.wav" id="18_amvth"]
[ext_resource type="AudioStream" uid="uid://bbmvmdp6ijgik" path="res://audio/sfx/footsteps/footstep_grass3.wav" id="19_ehosm"]
[ext_resource type="AudioStream" uid="uid://wmi46dbxf0fq" path="res://audio/sfx/footsteps/footstep_grass4.wav" id="20_sj6r3"]
[ext_resource type="AudioStream" uid="uid://d12xg7jn0jmh1" path="res://audio/sfx/footsteps/footstep_grass5.wav" id="21_exw54"]
[ext_resource type="AudioStream" uid="uid://chwinr34waxjp" path="res://audio/sfx/footsteps/footstep_grass6.wav" id="22_73nbr"]
[ext_resource type="AudioStream" uid="uid://bmod3gwhfgr3w" path="res://audio/sfx/footsteps/footstep_grass7.wav" id="23_x4ux7"]
[ext_resource type="AudioStream" uid="uid://dktybmkilqx8m" path="res://audio/sfx/footsteps/footstep_leaves1.wav" id="24_xuvyk"]
[ext_resource type="AudioStream" uid="uid://woehga6lgyj2" path="res://audio/sfx/footsteps/footstep_leaves2.wav" id="25_r4lcx"]
[ext_resource type="AudioStream" uid="uid://ceak8bw5u8ckw" path="res://audio/sfx/footsteps/footstep_leaves3.wav" id="26_a7x8f"]
[ext_resource type="AudioStream" uid="uid://dj7pgspjsnca0" path="res://audio/sfx/footsteps/footstep_leaves4.wav" id="27_6q113"]
[ext_resource type="AudioStream" uid="uid://lxx0yhk4peka" path="res://audio/sfx/footsteps/footstep_leaves5.wav" id="28_urnkp"]
[ext_resource type="AudioStream" uid="uid://di3vual2dqmnk" path="res://audio/sfx/footsteps/footstep_leaves6.wav" id="29_b8d4s"]
[ext_resource type="AudioStream" uid="uid://cl70pgn76g8kf" path="res://audio/sfx/footsteps/footstep_leaves7.wav" id="30_5wm7k"]
[ext_resource type="AudioStream" uid="uid://cl32cuqnivdyw" path="res://audio/sfx/footsteps/footstep_leaves8.wav" id="31_iieo7"]
[ext_resource type="AudioStream" uid="uid://cv5so3ejmkq0n" path="res://audio/sfx/footsteps/footstep_stone1.wav" id="32_msdpm"]
[ext_resource type="AudioStream" uid="uid://d1dae683cguyu" path="res://audio/sfx/footsteps/footstep_stone2.wav" id="33_6yiwo"]
[ext_resource type="AudioStream" uid="uid://3412hhsgd40m" path="res://audio/sfx/footsteps/footstep_stone3.wav" id="34_i8dvd"]
[ext_resource type="AudioStream" uid="uid://dj8onopu1mhky" path="res://audio/sfx/footsteps/footstep_stone4.wav" id="35_5utd6"]
[ext_resource type="AudioStream" uid="uid://bs1x2guj1va6d" path="res://audio/sfx/footsteps/footstep_stone5.wav" id="36_b7ekv"]
[ext_resource type="AudioStream" uid="uid://osd2v68g1v6x" path="res://audio/sfx/footsteps/footstep_stone6.wav" id="37_njnjg"]
[ext_resource type="AudioStream" uid="uid://cotbexju707pr" path="res://audio/sfx/footsteps/footstep_stone7.wav" id="38_n40lf"]
[ext_resource type="PackedScene" uid="uid://gl8cgqb4sok2" path="res://Art/3D Assets/Viewmodel_Arms_2.tscn" id="41_srr5f"]
[ext_resource type="AudioStream" uid="uid://iqrq1d4j7swd" path="res://audio/voice/errol_gasps.ogg" id="42_ib2is"]
[ext_resource type="AudioStream" uid="uid://d3xrtqofvcdsb" path="res://audio/stingers/stinger_jumpscare_noleadin.wav" id="43_8lcfv"]
[ext_resource type="AudioStream" uid="uid://cwtv7gbk5macx" path="res://audio/voice/breathing2.ogg" id="43_echou"]
[ext_resource type="AudioStream" uid="uid://clv5h5300u57q" path="res://audio/voice/breathing1.ogg" id="45_tqow2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ex6vp"]
radius = 0.2
height = 1.6

[sub_resource type="BoxShape3D" id="BoxShape3D_uw86g"]
size = Vector3(6, 6, 80)

[sub_resource type="CylinderMesh" id="CylinderMesh_rp0wo"]
top_radius = 0.0
bottom_radius = 15.0
height = 80.0
radial_segments = 16

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ds6x5"]
points = PackedVector3Array(-15, -40, -9.53674e-07, -13.8606, -40, -5.74099, -13.8606, -40, 5.73806, -12.0018, -24.0016, -9.53674e-07, -6.36648, -8.00313, -6.36648, -10.6069, -40, -10.6069, -6.00235, 7.9953, -9.53674e-07, -9.53674e-07, 40, -9.53674e-07, -2.12314, 23.9937, -2.12314, -10.6069, -40, 10.604, -6.36648, -8.00313, 6.36355, -5.74099, -40, -13.8606, 15, -40, -9.53674e-07, 13.8577, -40, -5.74099, 6.36355, -8.00313, -6.36648, 5.73806, -40, -13.8606, -9.53674e-07, 7.9953, -6.00235, -5.74099, -40, 13.8577, -9.53674e-07, -40, 15, 5.73806, -40, 13.8577, 6.36355, -8.00313, 6.36355, 13.8577, -40, 5.73806, -9.53674e-07, -24.0016, -12.0018, -9.53674e-07, -40, -15, 10.604, -40, -10.6069, 10.604, -40, 10.604)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qx3bh"]
streams_count = 8
random_pitch = 1.05
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("2_3b7jv")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_tm4sc")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_h55va")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_gsngq")
stream_3/weight = 1.0
stream_4/stream = ExtResource("6_8dck5")
stream_4/weight = 1.0
stream_5/stream = ExtResource("7_i88d1")
stream_5/weight = 1.0
stream_6/stream = ExtResource("8_sfodb")
stream_6/weight = 1.0
stream_7/stream = ExtResource("9_3xun0")
stream_7/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bqrbd"]
streams_count = 7
random_pitch = 1.05
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("10_veg2i")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_fa171")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_qsqtl")
stream_2/weight = 1.0
stream_3/stream = ExtResource("13_kw01s")
stream_3/weight = 1.0
stream_4/stream = ExtResource("14_xjwpi")
stream_4/weight = 1.0
stream_5/stream = ExtResource("15_7k5tv")
stream_5/weight = 1.0
stream_6/stream = ExtResource("16_5bb8r")
stream_6/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4w0yo"]
streams_count = 7
random_pitch = 1.05
random_volume_offset_db = 6.0
stream_0/stream = ExtResource("17_o604q")
stream_0/weight = 1.0
stream_1/stream = ExtResource("18_amvth")
stream_1/weight = 1.0
stream_2/stream = ExtResource("19_ehosm")
stream_2/weight = 1.0
stream_3/stream = ExtResource("20_sj6r3")
stream_3/weight = 1.0
stream_4/stream = ExtResource("21_exw54")
stream_4/weight = 1.0
stream_5/stream = ExtResource("22_73nbr")
stream_5/weight = 1.0
stream_6/stream = ExtResource("23_x4ux7")
stream_6/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rtq5b"]
streams_count = 8
random_pitch = 1.05
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("24_xuvyk")
stream_0/weight = 1.0
stream_1/stream = ExtResource("25_r4lcx")
stream_1/weight = 1.0
stream_2/stream = ExtResource("26_a7x8f")
stream_2/weight = 1.0
stream_3/stream = ExtResource("27_6q113")
stream_3/weight = 1.0
stream_4/stream = ExtResource("28_urnkp")
stream_4/weight = 1.0
stream_5/stream = ExtResource("29_b8d4s")
stream_5/weight = 1.0
stream_6/stream = ExtResource("30_5wm7k")
stream_6/weight = 1.0
stream_7/stream = ExtResource("31_iieo7")
stream_7/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mww8f"]
streams_count = 7
random_pitch = 1.05
random_volume_offset_db = 3.0
stream_0/stream = ExtResource("32_msdpm")
stream_0/weight = 1.0
stream_1/stream = ExtResource("33_6yiwo")
stream_1/weight = 1.0
stream_2/stream = ExtResource("34_i8dvd")
stream_2/weight = 1.0
stream_3/stream = ExtResource("35_5utd6")
stream_3/weight = 1.0
stream_4/stream = ExtResource("36_b7ekv")
stream_4/weight = 1.0
stream_5/stream = ExtResource("37_njnjg")
stream_5/weight = 1.0
stream_6/stream = ExtResource("38_n40lf")
stream_6/weight = 1.0

[sub_resource type="Animation" id="Animation_7f5vp"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h24lo"]
resource_name = "run"
length = 1.2
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.15, -0.25, 0, 0.25, 0, 0.15, -0.25, 0, 0.25, 0, -0.15, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 0.0250144, 0.15, -0.1, -0.0576668, 0.1, -0.0720923, -0.017449, -0.1, 0.0105787, 0.1, 0.015868, 0.15, -0.1, -0.0576668, 0.1, -0.0865177, 0, -0.1, 0.00370833, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_mru3d"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, -0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 0.00370833, 0.1, -0.05, -0.0106674, 0.05, -0.0053781, -0.017449, -0.1, 0.0105787, 0.1, 0.015868, 0.1, -0.05, -0.0106674, 0.05, 0.0104899, 0, -0.1, 0.00370833, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdwwb"]
_data = {
"RESET": SubResource("Animation_7f5vp"),
"run": SubResource("Animation_h24lo"),
"walk": SubResource("Animation_mru3d")
}

[sub_resource type="Animation" id="Animation_3ft2a"]
resource_name = "breathing_heavy"
length = 2.5785
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.478215,
"start_offset": 0.0996282,
"stream": ExtResource("45_tqow2")
}],
"times": PackedFloat32Array(-0.1)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 2.74974,
"start_offset": 0.0,
"stream": ExtResource("43_echou")
}],
"times": PackedFloat32Array(1.4)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_qboja"]
resource_name = "breathing_light"
length = 3.5945
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.338736,
"start_offset": 0.0,
"stream": ExtResource("43_echou")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_8myd8"]
resource_name = "gasp1"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 6.1371,
"start_offset": 0.0,
"stream": ExtResource("42_ib2is")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_u0lyv"]
resource_name = "gasp2"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 4.70245,
"start_offset": 1.41472,
"stream": ExtResource("42_ib2is")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_fmxch"]
resource_name = "gasp3"
length = 4.95
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 2.67003,
"start_offset": 3.8855,
"stream": ExtResource("42_ib2is")
}],
"times": PackedFloat32Array(0.1)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 3.20803,
"start_offset": 0.0,
"stream": ExtResource("43_8lcfv")
}],
"times": PackedFloat32Array(0.5)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frmqy"]
_data = {
"breathing_heavy": SubResource("Animation_3ft2a"),
"breathing_light": SubResource("Animation_qboja"),
"gasp1": SubResource("Animation_8myd8"),
"gasp2": SubResource("Animation_u0lyv"),
"gasp3": SubResource("Animation_fmxch")
}

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("1_twiyk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_ex6vp")

[node name="Viewmodel" parent="." instance=ExtResource("41_srr5f")]
transform = Transform3D(-2.87621e-08, 0, -0.658, 0, 0.658, 0, 0.658, 0, -2.87621e-08, 0, -0.279, -0.441)

[node name="Camera3D" type="Camera3D" parent="."]
environment = ExtResource("2_2yxsw")
current = true
fov = 60.0

[node name="PhoneHolder" type="Node3D" parent="Camera3D"]
transform = Transform3D(0.364676, 0, -0.405014, 0, 0.545, 0, 0.405014, 0, 0.364676, 0.073, -0.031, -0.095)

[node name="Phone" parent="Camera3D/PhoneHolder" instance=ExtResource("2_owhr2")]
transform = Transform3D(0.131, 0, 0, 0, 0.131, 0, 0, 0, 0.131, 0.003, -0.013, 0)

[node name="ShapeCast3D" type="ShapeCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.289, -40.6621)
shape = SubResource("BoxShape3D_uw86g")
target_position = Vector3(0, 0, 0)
max_results = 1
collision_mask = 3

[node name="LineOfSight" type="Area3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.289464, 0)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D/LineOfSight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.165353, -40.3182)
visible = false
mesh = SubResource("CylinderMesh_rp0wo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/LineOfSight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.165353, -40.3182)
shape = SubResource("ConvexPolygonShape3D_ds6x5")

[node name="footsteps_woodcreak" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_qx3bh")
volume_db = -3.0
max_db = 0.0
bus = &"sfx"

[node name="footsteps_dirt" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_bqrbd")
volume_db = -3.0
max_db = 0.0
bus = &"sfx"

[node name="footsteps_grass" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_4w0yo")
volume_db = -3.0
max_db = 0.0
bus = &"sfx"

[node name="footsteps_leaves" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_rtq5b")
volume_db = -3.0
max_db = 0.0
bus = &"sfx"

[node name="footsteps_rock" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_mww8f")
volume_db = -3.0
max_db = 0.0
bus = &"sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gdwwb")
}

[node name="Camera_Target" type="Node3D" parent="."]

[node name="PlayerSounds" type="AudioStreamPlayer" parent="."]
volume_db = 3.0
bus = &"dialogue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSounds"]
libraries = {
"": SubResource("AnimationLibrary_frmqy")
}

[node name="PlayerSFX" type="AudioStreamPlayer" parent="."]
volume_db = -3.0
bus = &"sfx"

[connection signal="body_entered" from="Camera3D/LineOfSight" to="." method="_on_line_of_sight_body_entered"]
